chore: profile optons
