# docs/swagger.yaml
@@ -372,23 +372,46 @@ definitions:
     type: object
   user.UserResponse:
     properties:
+      address_country:
+        type: string
+      address_locality:
+        type: string
+      address_postal_code:
+        type: string
+      address_region:
+        type: string
+      address_street:
+        type: string
       created_at:
         type: string
       email:
         type: string
       failed_login_attempts:
         type: integer
+      family_name:
+        type: string
+      given_name:
+        description: OIDC standard profile claims
+        type: string
       id:
         type: string
       is_email_verified:
         type: boolean
+      locale:
+        type: string
       locked_until:
+        type: string
+      phone_number:
+        type: string
+      picture:
         type: string
       role:
         type: string
       totp_verified:
         type: boolean
       username:
+        type: string
+      zoneinfo:
         type: string
     type: object
 host: localhost:9999
